make sure long words don't overflow on small screens

--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -1,4 +1,7 @@
 
+body {
+  overflow-wrap: break-word;
+}
 
 .chart {
   width: 100%;
